# geoagent

./: .env.example  .gitignore  .gitmodules  README.md  agent.py  bun.lockb  connector.py  context.py  coords.py  index.html  justfile  notes.md  osm.py  osmExplore.ipynb  package.json  pixi.toml  prompting.py  pyproject.toml  requirements.txt  tmp.txt  tryAPI.ipynb  utils.py  vllm.py
client/: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json
client/src/: App.tsx  ContextNode.tsx  fileUpload.tsx  index.css  infoDisplay.tsx  main.tsx  mock.ts  socialImport.tsx  socket.ts  store.ts  utils.ts
connector/: __init__.py  gemini.py  gemini_lmm.py  gemini_prompting.py  gptv.py  gptv_browser.py  gptv_lc.py  llava.py
geoeval/: db.csv
models/: llava.py
notebooks/: autogen_agent.ipynb  autogen_gptv_basic.ipynb  dataset_prep.ipynb  extract_ds.ipynb  gpt_turbo_try.ipynb  lnks.txt  osm_rendering.ipynb  proc_geoconfirmed.ipynb  rescue_sample.ipynb  sample_gen.ipynb  testouteval.ipynb  tryAPI.ipynb  try_bing.ipynb  try_google_lens.ipynb  try_llava_autogen.ipynb  try_qwen.ipynb  tweety.ipynb  ukr-civharm-2024-03-24 (1).json
sample/: nominatim_query_res0.csv
src/: Untitled-1.json  agent.py  cli.py  config.py  context.py  coords.py  evaluation.py  messages.py  prompting.py  react_parser.py  session.py  sock.py  subscriber.py  utils.py
src/connector/: __init__.py  fast_lm.py  gemini.py  gemini_lmm.py  gemini_prompting.py  gemini_troubleshoot.py  gptv.py  gptv_browser.py  gptv_lc.py  llava.py
strategies/: intersection.md
tmp/: invalimg.json  red.json
tools/: __init__.py  bing.py  google_streetview.py  nomantim.py  nominatim.py  osm-wiki.py  osm.py  serp.py
utils/: anonymize.py
(+97 files in other folders)
